# back-end

./: .env_exemplo  README.md  pyproject.toml  requirements.txt
config/: settings.py  urls.py
core/adress/: admin.py  apps.py  models.py  serializers.py  views.py
core/adress/migrations/: 0001_initial.py
core/establishment/: admin.py  apps.py  signals.py  tests.py
core/establishment/migrations/: 0001_initial.py  0002_ingredient.py  0002_rename_unit_ingredient_unit_of_measure_and_more.py  0003_recipient.py  0003_stock.py  0004_customcup.py  0004_finalcup.py  0005_alter_customcup_price.py  0005_combo.py  0006_remove_stock_unit_of_measure.py  0007_ingredient_is_addon.py  0008_alter_stock_supplier.py  0009_dailyrevenue.py  0010_alter_dailyrevenue_date.py
core/establishment/models/: __init__.py  combo.py  custom_cup.py  daily_revenue.py  establishment.py  final_cup.py  ingredient.py  recipient.py  stock.py
core/establishment/serializers/: __init__.py  combo.py  custom_cup.py  daily_revenue.py  establishment.py  final_cup.py  ingredient.py  recipient.py  stock.py
core/establishment/tests/: test_combo.py  test_daily_revenue.py  test_daily_revenue_viewset.py  test_establishment.py  test_final_cup.py  test_ingredient.py  test_recipient.py  test_stock.py
core/orders/: admin.py  apps.py  models.py  pix_views.py  serializers.py  signals.py  utils.py  views.py
core/supplier/: admin.py  apps.py  models.py  serializers.py  views.py
core/users/: admin.py  managers.py  models.py  serializers.py  views.py
pe_de_acai/: apps.py
staticfiles/: staticfiles.json
(+26 files in other folders)
